# research2020

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xynotec/research2020/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LzmaRamDecode.c  LzmaRamDecode.h  LzmaTypes.h  image_util.cpp  image_util.h  native_lzma.c  simplecam.cpp  simplecam.h
app/src/main/cpp/Agg2D/inc/: Agg2D.h
app/src/main/cpp/Agg2D/inc/Agg2D/: agg_rasterizer_cells_aa.h  agg_renderer_outline_aa.h
app/src/main/cpp/Agg2D/src/: Agg2D.cpp
app/src/main/cpp/include/: BasicEffect.h  BokehEffect.h  ConvMatrix.h  Typedef.h
app/src/main/cpp/source/: BasicEffect.cpp  BokehEffect.cpp  ConvMatrix.cpp
app/src/main/java/com/xynotec/camera/: CameraCallback.java  CameraOverlayView.java  CameraSurface.java
app/src/main/java/com/xynotec/dagger/: BaseActivity.java  BaseFragment.java  BaseViewHolder.java  BaseViewModel.java
app/src/main/java/com/xynotec/gui/: SplashScreen.java  SquareLayout.java
app/src/main/java/com/xynotec/image/: ARGBImage.java  ImageUtil.java
app/src/main/java/com/xynotec/research2020/: MainApplication.java  ViewModelProviderFactory.java
app/src/main/java/com/xynotec/research2020/data/: AppDataManager.java  DataManager.java
app/src/main/java/com/xynotec/research2020/data/local/db/: AppDbHelper.java  DbHelper.java
app/src/main/java/com/xynotec/research2020/data/local/prefs/: AppPreferencesHelper.java  PreferencesHelper.java
app/src/main/java/com/xynotec/research2020/data/remote/: ApiEndPoint.java  ApiHeader.java  ApiHelper.java  AppApiHelper.java
app/src/main/java/com/xynotec/research2020/data/remote/cryptocurrency/listting/latest/: CryptocurrencyListingsLatestResponse.java  Data.java  Platform.java  Quote.java  Status.java  USD.java
app/src/main/java/com/xynotec/research2020/di/: ApiInfo.java
app/src/main/java/com/xynotec/research2020/di/component/: AppComponent.java
app/src/main/java/com/xynotec/research2020/di/module/: ActivityBuilder.java  AppModule.java
app/src/main/java/com/xynotec/research2020/ui/antigrain/: AntigrainActivity.java
app/src/main/java/com/xynotec/research2020/ui/imagefilter/: ImageFilterActivity.java  ImageFilterViewModel.java
app/src/main/java/com/xynotec/research2020/ui/main/: MainActivity.java  MainActivityModule.java  MainViewModel.java
app/src/main/java/com/xynotec/research2020/ui/shimmer/: ListingLatestAdapter.java  ShimmerActivity.java  ShimmerActivityModule.java  ShimmerActivityProvider.java  ShimmerItemViewModel.java  ShimmerViewModel.java
app/src/main/java/com/xynotec/research2020/utils/: BindingUtils.java
app/src/main/java/com/xynotec/utils/: CommonUtils.java  DeviceUtils.java  MathUtils.java
app/src/main/res/drawable/: ic_arrow.xml  ic_img_sb_mic.xml  ic_menu_quick_search.xml  ic_nav_profile.xml  ic_tab_history.xml  ic_tab_translate.xml  ic_toolbar_swap_dict.xml  ic_translate_clear.xml  ic_translate_swap.xml  xynotec_icon.xml  xynotec_logo.xml
app/src/main/res/layout/: activity_antigrain.xml  activity_imagefilter.xml  activity_main.xml  activity_shimmer.xml  app_bar_main.xml  app_bar_sub.xml  content_main.xml  listing_latest_list_item.xml  nav_header_main.xml  shimmer_latest_list_item.xml  xynotec_splash.xml
app/src/main/res/menu/: activity_main_drawer.xml  menu_del_item.xml  menu_img_filter.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/xynotec/research2020/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
